#9510 refine newten package and boot script.
add "set env".

set "hive.execution.engine" to mr in hive-site.xml